# safetensors

./: .gitignore  RELEASE.md
.github/workflows/: python-release.yml  python.yml  rust-release.yml
bindings/python/: Cargo.toml
bindings/python/benches/: test_pt.py
bindings/python/src/: dlpack.rs  lib.rs  metal.rs
bindings/python/tests/: test_pt_comparison.py
safetensors/: Cargo.toml
